--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url(cover.jpg);
+    background: url(pex.jpg);
     background-size:cover;
     background-repeat: no-repeat;
 }
