--- a/inscription-participants/style2.css
+++ b/inscription-participants/style2.css
@@ -1,4 +1,8 @@
-h2 {
+h2{
+  display: none;
+}
+
+h1 {
     padding-top: 50px;
     text-align: center;
     text-transform: uppercase;
@@ -6,8 +10,8 @@ h2 {
     font-size: 3.2em;
     line-height: 48px;
     padding-bottom: 48px;
-    background: -moz-linear-gradient(left,#f4524d  0%,#5543ca 100%) !important;
-    background: -webkit-linear-gradient(left,#f4524d  0%,#5543ca 100%) !important;
+    /* background: -moz-linear-gradient(left,#f4524d  0%,#5543ca 100%) !important;*/
+    background: -webkit-linear-gradient(left,#f4524d  0%,#5543ca 100%) !important; 
     background: linear-gradient(to right,#f4524d  0%,#5543ca  100%) !important;
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent !important;
@@ -16,3 +20,4 @@ h2 {
 button {
     margin-bottom: 50px;
 }
+
