--- a/inscription-participants/style2.css
+++ b/inscription-participants/style2.css
@@ -17,7 +17,21 @@ h1 {
     -webkit-text-fill-color: transparent !important;
   }
 
-button {
-    margin-bottom: 50px;
+.btn {
+    display: inline-block;
+    background-image: linear-gradient(125deg,#a72879,#064497);
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 16px;
+    padding: 8px 16px;
+    border: none;
+    width:200px;
+    cursor: pointer;
+
+}
+
+th{
+  background: rgb(175, 164, 164);
 }
 
