--- a/certificats.css
+++ b/certificats.css
@@ -3,6 +3,11 @@
 body, html {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
+   
 }
 body {
     color: black;
@@ -12,8 +17,7 @@ body {
 }
 .container {
     border: 20px solid  rgb(41, 62, 92);
-    width: 100%;
-    height: 90vh;
+    height: 93vh;
     display: block;
     margin: auto;
 
@@ -23,26 +27,38 @@ body {
 .logo {
     color:  rgb(41, 62, 92);
     text-transform: uppercase;
-    margin-top: 2rem;
+    padding-top:15px ;
 }
 
 .marquee {
     color:  rgb(41, 62, 92);;
     font-size: 48px;
-    margin: 20px;
+    padding-top:15px ;
+
 }
 .assignment {
-    margin: 20px;
+    padding-top:15px ;
 }
 .person {
     border-bottom: 2px solid black;
     font-size: 4rem;
     font-style: italic;
-    margin: 3rem auto;
+    padding-top:15px ;
+    margin: auto;
     width: 400px;
     font-family: 'Tangerine', cursive;
     text-transform: capitalize;
-}
+   }
+   
 .reason {
-    margin: 20px;
+    margin: 10px;
+}
+
+.stamp{
+    width: 220px;
+    height: 200px;
+    padding-bottom: 100px;
+    
+
+
 }
